# crm

./: README.md  pyproject.toml  requirements.txt
backend/: config.py  ioc.py  main_fastapi.py  main_rabbitmq.py
backend/application/: common_interfaces.py
backend/application/lead/: dto.py  exceptions.py  interactors.py  interfaces.py  validators.py
backend/domen/: entities.py
backend/handlers/api/v1/: exceptions_handlers.py  leads.py  responses_descriptions.py  schemas.py
backend/handlers/rabbitmq/: worker.py
backend/infrastructure/: context.py  generator.py
backend/infrastructure/db/: models.py  repositories.py
backend/infrastructure/queue/: rabbitmq_broker.py
backend/migrations/: env.py
backend/migrations/versions/: 33ef1cefb25c_.py  978d421ef128_.py
backend/tests/: conftest.py
backend/tests/e2e/: test_leads_api.py
backend/tests/integration/: test_interactors.py
