[tool.poetry]
name = "crm"
version = "0.1.0"
description = "CRM сервис (FastAPI + RabbitMQ + Postgres)"
authors = ["Ваше Имя <you@example.com>"]
readme = "README.md"
python = ">=3.11,<3.13"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.9.0"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
aio-pika = "^9.4.3"
tenacity = "^9.0.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
mypy = "^1.11.0"
black = "^24.8.0"
isort = "^5.13.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
testcontainers = { version = "^4.7.2", extras = ["postgres", "rabbitmq"] }
faker = "^30.0.0"
psycopg2-binary = "^2.9.9"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"
markers = [
  "integration: integration tests",
  "e2e: end-to-end tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
